[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "darklight"
version = "0.1.0"
description = "Semi-empirical galaxy formation model calibrated on observations and the EDGE dwarf galaxy simulation suite"
authors = [
    {name = "Stacy Kim", email = "skim11@carnegiescience.edu"}
]
license = {text = "MIT"}
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "scipy>=1.7.0",
    "pynbody>=2.1",
    "tangos>=1.10.0",
    "colossus>1.3.0"
]

[project.urls]
Repository = "https://github.com/stacykim/darklight"